--- a/index.html
+++ b/index.html
@@ -6,161 +6,67 @@
 <title>Produce101 11人ピラミッド</title>
 
 <style>
-body{
-  margin:0;
-  background:#0b0c10;
-  color:#e8e9ee;
-  font-family:system-ui,-apple-system,"Noto Sans JP",sans-serif;
-}
-
-header{
-  padding:16px;
-  border-bottom:1px solid #222;
-  background:#111;
-  position:sticky;
-  top:0;
-}
-
+body{margin:0;background:#0b0c10;color:#e8e9ee;font-family:system-ui,-apple-system,"Noto Sans JP",sans-serif;}
+header{padding:16px;border-bottom:1px solid #222;background:#111;position:sticky;top:0;z-index:10;}
 h1{margin:0 0 10px;font-size:18px;}
-
-button,select{
-  padding:8px 12px;
-  background:#1a1d29;
-  border:1px solid #2a2f44;
-  color:#fff;
-  border-radius:8px;
-  cursor:pointer;
-}
-
-textarea{
-  width:100%;
-  padding:10px;
-  border-radius:8px;
-  background:#111;
-  color:#fff;
-  border:1px solid #333;
-}
-
-.container{
-  display:grid;
-  grid-template-columns: 1fr 380px;
-  gap:16px;
-  padding:16px;
-}
-
-@media(max-width:900px){
-  .container{grid-template-columns:1fr;}
-}
-
-.grid{
-  display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(100px,1fr));
-  gap:12px;
-}
-
-.card{
-  background:#141824;
-  border:1px solid #2a2f44;
-  border-radius:12px;
-  overflow:hidden;
-  cursor:pointer;
-  text-align:center;
-}
-
-.card img{
-  width:100%;
-  aspect-ratio:1/1;
-  object-fit:cover;
-}
-
-.card.selected{
-  outline:3px solid #ff6ea8;
-}
-
-.side{
-  display:flex;
-  flex-direction:column;
-  gap:16px;
-}
-
-.pyramid{
-  background:#141824;
-  border-radius:16px;
-  padding:16px;
-}
-
-.pRow{
-  display:flex;
-  justify-content:center;
-  gap:12px;
-  margin-bottom:12px;
-}
-
-.pRow img{
-  width:90px;
-  height:90px;
-  border-radius:14px;
-  object-fit:cover;
-  border:1px solid #333;
-}
+button,select{padding:8px 12px;background:#1a1d29;border:1px solid #2a2f44;color:#fff;border-radius:8px;cursor:pointer;}
+.container{display:grid;grid-template-columns:1fr 380px;gap:16px;padding:16px;}
+@media(max-width:900px){.container{grid-template-columns:1fr;}}
+.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(100px,1fr));gap:12px;}
+.card{background:#141824;border:1px solid #2a2f44;border-radius:12px;overflow:hidden;cursor:pointer;text-align:center;}
+.card img{width:100%;aspect-ratio:1/1;object-fit:cover;background:#0a0b12;}
+.card.selected{outline:3px solid #ff6ea8;}
+.side{display:flex;flex-direction:column;gap:16px;}
+.pyramid{background:#141824;border-radius:16px;padding:16px;}
+.pRow{display:flex;justify-content:center;gap:12px;margin-bottom:12px;flex-wrap:wrap;}
+.pRow img{width:90px;height:90px;border-radius:14px;object-fit:cover;border:1px solid #333;background:#0a0b12;}
+.small{font-size:12px;color:#aab0c0;line-height:1.5;}
+hr{border:0;border-top:1px solid #222;margin:16px 0;}
 </style>
 </head>
 
 <body>
 
 <header>
-<h1>Produce101 11人ピラミッドメーカー</h1>
-
-<select id="sortSelect"></select>
-
+  <h1>Produce101 11人ピラミッドメーカー</h1>
+  <div style="display:flex;gap:10px;align-items:center;flex-wrap:wrap;">
+    <select id="sortSelect"></select>
+    <button id="btnReload">データ再読込</button>
+    <span class="small" id="status">データ読込中…</span>
+  </div>
 </header>
 
 <div class="container">
+  <div>
+    <div class="small">
+      data/master.csv を自動で読み込み中。<br>
+      画像は <code>./img/trainees/</code> 配下に置いて、CSVのimg列にパスを書いてな。
+    </div>
+    <hr>
+    <div class="grid" id="grid"></div>
+  </div>
 
-<div>
+  <div class="side">
+    <div>
+      <h3>選択中（最大11）</h3>
+      <div id="selectedList" class="small"></div>
+    </div>
 
-<h3>CSVインポート（id,name,img）</h3>
-<textarea id="csvInput" rows="8" placeholder="id,name,img&#10;adamnagai,アダム・ナガイ,./img/trainees/adamnagai.jpg"></textarea>
-<br><br>
-<button onclick="loadMaster()">マスター読込</button>
-
-<hr style="margin:30px 0;border-color:#222;">
-
-<div class="grid" id="grid"></div>
-
-</div>
-
-<div class="side">
-
-<div>
-<h3>選択中（最大11）</h3>
-<div id="selectedList"></div>
-</div>
-
-<div class="pyramid">
-<h3>プレビュー</h3>
-<div id="pyramidArea"></div>
-</div>
-
-</div>
-
+    <div class="pyramid">
+      <h3>プレビュー</h3>
+      <div id="pyramidArea"></div>
+    </div>
+  </div>
 </div>
 
 <script>
-
 let TRAINEES = [];
 let selected = [];
 let currentSort = "default";
 
 const SORTS = {
-  default:{
-    label:"登録順",
-    compare:(a,b)=>a.no-b.no
-  },
-  name:{
-    label:"名前順",
-    compare:(a,b)=>a.name.localeCompare(b.name,"ja")
-  }
+  default:{ label:"登録順", compare:(a,b)=>a.no-b.no },
+  name:{ label:"名前順", compare:(a,b)=>a.name.localeCompare(b.name,"ja") },
 };
 
 function initSort(){
@@ -168,49 +74,83 @@ function initSort(){
   sel.innerHTML="";
   Object.keys(SORTS).forEach(k=>{
     const o=document.createElement("option");
-    o.value=k;
-    o.textContent=SORTS[k].label;
+    o.value=k; o.textContent=SORTS[k].label;
     sel.appendChild(o);
   });
-  sel.onchange=()=>{
-    currentSort=sel.value;
-    renderGrid();
-  };
+  sel.value=currentSort;
+  sel.onchange=()=>{ currentSort=sel.value; renderGrid(); };
 }
 
-function loadMaster(){
-  const text=document.getElementById("csvInput").value.trim();
-  if(!text)return;
+function setStatus(msg){ document.getElementById("status").textContent = msg; }
 
-  const lines=text.split(/\r?\n/);
-  const header=lines.shift().split(",");
-  const idIdx=header.indexOf("id");
-  const nameIdx=header.indexOf("name");
-  const imgIdx=header.indexOf("img");
-
-  TRAINEES=lines.map((l,i)=>{
-    const c=l.split(",");
-    return{
-      no:i+1,
-      id:c[idIdx],
-      name:c[nameIdx],
-      img:c[imgIdx]
-    };
+// CSV簡易パーサ（カンマ/タブどっちもOK、ダブルクォートも最低限対応）
+function parseTable(text){
+  const t = text.trim();
+  if(!t) return [];
+  const lines = t.split(/\r?\n/).filter(l=>l.trim().length);
+  const delim = (lines[0].includes("\t") && !lines[0].includes(",")) ? "\t" : ",";
+  const rows = lines.map(line => splitLine(line, delim));
+  const header = rows.shift().map(h=>h.trim());
+  return rows.map(cols=>{
+    const obj={};
+    header.forEach((h,i)=> obj[h]=(cols[i]??"").trim());
+    return obj;
   });
+}
+function splitLine(line, delim){
+  const out=[]; let cur=""; let inQ=false;
+  for(let i=0;i<line.length;i++){
+    const ch=line[i];
+    if(ch === '"'){
+      if(inQ && line[i+1] === '"'){ cur+='"'; i++; }
+      else inQ=!inQ;
+      continue;
+    }
+    if(!inQ && ch===delim){ out.push(cur); cur=""; continue; }
+    cur+=ch;
+  }
+  out.push(cur);
+  return out;
+}
 
+async function loadMasterFromFile(){
+  setStatus("data/master.csv 読込中…");
+  const res = await fetch("./data/master.csv", { cache: "no-store" });
+  if(!res.ok) throw new Error("master.csv が読めへん（" + res.status + "）");
+  const text = await res.text();
+  const rows = parseTable(text);
+
+  // 必須列: id,name,img
+  const filtered = rows.filter(r=>r.id && r.name && r.img);
+
+  TRAINEES = filtered.map((r,i)=>({
+    no:i+1,
+    id:r.id,
+    name:r.name,
+    img:r.img,
+    profileUrl: r.profileUrl || r.url || ""
+  }));
+
+  // 選択の整合（データ更新で消えたidを削除）
+  const idSet = new Set(TRAINEES.map(t=>t.id));
+  selected = selected.filter(id => idSet.has(id));
+
+  setStatus(`読込OK：${TRAINEES.length}人`);
+  initSort();
   renderGrid();
+  renderSelected();
+  renderPyramid();
 }
 
 function renderGrid(){
   const grid=document.getElementById("grid");
   grid.innerHTML="";
-
   const sorted=[...TRAINEES].sort(SORTS[currentSort].compare);
 
   sorted.forEach(t=>{
     const div=document.createElement("div");
     div.className="card"+(selected.includes(t.id)?" selected":"");
-    div.innerHTML=`<img src="${t.img}"><div>${t.name}</div>`;
+    div.innerHTML=`<img src="${t.img}" alt=""><div style="padding:6px 6px 10px;">${t.name}</div>`;
     div.onclick=()=>toggleSelect(t.id);
     grid.appendChild(div);
   });
@@ -220,7 +160,7 @@ function toggleSelect(id){
   if(selected.includes(id)){
     selected=selected.filter(x=>x!==id);
   }else{
-    if(selected.length>=11)return;
+    if(selected.length>=11) return;
     selected.push(id);
   }
   renderGrid();
@@ -230,12 +170,13 @@ function toggleSelect(id){
 
 function renderSelected(){
   const box=document.getElementById("selectedList");
+  if(selected.length===0){ box.textContent="（まだ選んでへん）"; return; }
   box.innerHTML="";
-  selected.forEach(id=>{
+  selected.forEach((id,idx)=>{
     const t=TRAINEES.find(x=>x.id===id);
-    if(!t)return;
+    if(!t) return;
     const div=document.createElement("div");
-    div.textContent=t.name;
+    div.textContent = `${idx+1}. ${t.name}`;
     box.appendChild(div);
   });
 }
@@ -245,25 +186,38 @@ function renderPyramid(){
   area.innerHTML="";
   const shape=[1,2,3,5];
   let idx=0;
-
   shape.forEach(n=>{
     const row=document.createElement("div");
     row.className="pRow";
     for(let i=0;i<n;i++){
       const id=selected[idx++];
-      if(id){
-        const t=TRAINEES.find(x=>x.id===id);
-        const img=document.createElement("img");
-        img.src=t.img;
-        row.appendChild(img);
+      if(!id){
+        const ph=document.createElement("div");
+        ph.style.width="90px";
+        ph.style.height="90px";
+        ph.style.borderRadius="14px";
+        ph.style.border="1px dashed #333";
+        row.appendChild(ph);
+        continue;
       }
+      const t=TRAINEES.find(x=>x.id===id);
+      const img=document.createElement("img");
+      img.src=t.img;
+      img.title=t.name;
+      row.appendChild(img);
     }
     area.appendChild(row);
   });
 }
 
-initSort();
+document.getElementById("btnReload").addEventListener("click", ()=>{
+  loadMasterFromFile().catch(e=>setStatus("エラー: "+e.message));
+});
 
+// 初回ロード
+loadMasterFromFile().catch(e=>{
+  setStatus("エラー: " + e.message + "（data/master.csv を作ってコミットしてるか確認）");
+});
 </script>
 
 </body>
