--- a/index.html
+++ b/index.html
@@ -1,224 +1,367 @@
 <!doctype html>
 <html lang="ja">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Produce101 11人ピラミッド</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Produce101 11人ピラミッドメーカー</title>
+  <style>
+    :root{
+      --bg:#0b0f1a;
+      --panel:#121a2b;
+      --panel2:#0f1626;
+      --text:#e8eefc;
+      --muted:#a9b6d6;
+      --line:rgba(255,255,255,.12);
+      --shadow:0 10px 30px rgba(0,0,0,.35);
+      --r:14px;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+      background: radial-gradient(1200px 600px at 20% -10%, rgba(80,120,255,.25), transparent 60%),
+                  radial-gradient(900px 500px at 80% 0%, rgba(160,90,255,.18), transparent 55%),
+                  var(--bg);
+      color:var(--text);
+    }
+    header{
+      position:sticky; top:0; z-index:10;
+      backdrop-filter: blur(10px);
+      background: rgba(11,15,26,.72);
+      border-bottom:1px solid var(--line);
+    }
+    .wrap{max-width:1100px;margin:0 auto;padding:16px}
+    .top{
+      display:flex; align-items:center; justify-content:space-between; gap:12px;
+      padding:10px 0 6px;
+    }
+    h1{margin:0;font-size:18px;font-weight:700;letter-spacing:.2px}
+    .controls{
+      display:flex; gap:10px; align-items:center; flex-wrap:wrap; justify-content:flex-end;
+    }
+    select, button{
+      height:36px;
+      border-radius:10px;
+      border:1px solid var(--line);
+      background: rgba(18,26,43,.9);
+      color:var(--text);
+      padding:0 12px;
+      outline:none;
+    }
+    button{
+      cursor:pointer;
+      background: linear-gradient(180deg, rgba(40,120,255,.9), rgba(30,90,210,.9));
+      border:1px solid rgba(255,255,255,.14);
+      box-shadow: 0 8px 18px rgba(30,90,210,.25);
+    }
+    button:active{transform: translateY(1px)}
+    main{max-width:1100px;margin:0 auto;padding:18px 16px 60px}
+    .grid{
+      display:grid;
+      grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+      gap:14px;
+    }
+    .card{
+      background: linear-gradient(180deg, rgba(18,26,43,.9), rgba(15,22,38,.92));
+      border:1px solid var(--line);
+      border-radius: var(--r);
+      box-shadow: var(--shadow);
+      overflow:hidden;
+      cursor:pointer;
+      transition: transform .12s ease, border-color .12s ease, filter .12s ease;
+      user-select:none;
+    }
+    .card:hover{transform: translateY(-2px)}
+    .thumb{
+      aspect-ratio: 1 / 1;
+      width:100%;
+      background: rgba(255,255,255,.06);
+      display:block;
+      object-fit: cover;
+    }
+    .meta{padding:10px 10px 12px}
+    .name{font-size:14px;font-weight:650;line-height:1.2;margin:0 0 6px}
+    .sub{font-size:12px;color:var(--muted);margin:0}
+    .card.selected{
+      border-color: rgba(110,190,255,.85);
+      filter: saturate(1.05);
+      box-shadow: 0 0 0 2px rgba(110,190,255,.25), var(--shadow);
+    }
 
-<style>
-body{margin:0;background:#0b0c10;color:#e8e9ee;font-family:system-ui,-apple-system,"Noto Sans JP",sans-serif;}
-header{padding:16px;border-bottom:1px solid #222;background:#111;position:sticky;top:0;z-index:10;}
-h1{margin:0 0 10px;font-size:18px;}
-button,select{padding:8px 12px;background:#1a1d29;border:1px solid #2a2f44;color:#fff;border-radius:8px;cursor:pointer;}
-.container{display:grid;grid-template-columns:1fr 380px;gap:16px;padding:16px;}
-@media(max-width:900px){.container{grid-template-columns:1fr;}}
-.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(100px,1fr));gap:12px;}
-.card{background:#141824;border:1px solid #2a2f44;border-radius:12px;overflow:hidden;cursor:pointer;text-align:center;}
-.card img{width:100%;aspect-ratio:1/1;object-fit:cover;background:#0a0b12;}
-.card.selected{outline:3px solid #ff6ea8;}
-.side{display:flex;flex-direction:column;gap:16px;}
-.pyramid{background:#141824;border-radius:16px;padding:16px;}
-.pRow{display:flex;justify-content:center;gap:12px;margin-bottom:12px;flex-wrap:wrap;}
-.pRow img{width:90px;height:90px;border-radius:14px;object-fit:cover;border:1px solid #333;background:#0a0b12;}
-.small{font-size:12px;color:#aab0c0;line-height:1.5;}
-hr{border:0;border-top:1px solid #222;margin:16px 0;}
-</style>
+    /* ピラミッド */
+    .pyramidWrap{margin-top:18px}
+    .pyramid{
+      background: rgba(18,26,43,.65);
+      border:1px solid var(--line);
+      border-radius: var(--r);
+      box-shadow: var(--shadow);
+      padding:14px;
+    }
+    .row{
+      display:flex;
+      justify-content:center;
+      gap:10px;
+      margin:10px 0;
+      flex-wrap:wrap;
+    }
+    .slot{
+      width:86px;
+      border-radius:14px;
+      border:1px dashed rgba(255,255,255,.18);
+      background: rgba(255,255,255,.04);
+      overflow:hidden;
+    }
+    .slot img{
+      width:100%;
+      aspect-ratio:1/1;
+      object-fit:cover;
+      display:block;
+    }
+    .slot .cap{
+      padding:6px 8px 8px;
+      font-size:11px;
+      color:var(--muted);
+      white-space:nowrap;
+      overflow:hidden;
+      text-overflow:ellipsis;
+    }
+    .hintBar{
+      display:flex; align-items:center; justify-content:space-between;
+      margin:0 0 10px; gap:10px; flex-wrap:wrap;
+      color:var(--muted); font-size:12px;
+    }
+    .miniBtns{display:flex; gap:8px; align-items:center}
+    .mini{
+      height:32px;
+      padding:0 10px;
+      border-radius:10px;
+      background: rgba(255,255,255,.06);
+      border:1px solid var(--line);
+      box-shadow:none;
+    }
+    .mini.primary{
+      background: rgba(40,120,255,.22);
+      border-color: rgba(40,120,255,.35);
+    }
+
+    @media (max-width:520px){
+      .slot{width:78px}
+    }
+  </style>
 </head>
-
 <body>
-
-<header>
-  <h1>Produce101 11人ピラミッドメーカー</h1>
-  <div style="display:flex;gap:10px;align-items:center;flex-wrap:wrap;">
-    <select id="sortSelect"></select>
-    <button id="btnReload">データ再読込</button>
-    <span class="small" id="status">データ読込中…</span>
-  </div>
-</header>
-
-<div class="container">
-  <div>
-    <div class="small">
-      data/master.csv を自動で読み込み中。<br>
-      画像は <code>./img/trainees/</code> 配下に置いて、CSVのimg列にパスを書いてな。
+  <header>
+    <div class="wrap">
+      <div class="top">
+        <h1>Produce101 11人ピラミッドメーカー</h1>
+        <div class="controls">
+          <select id="sort">
+            <option value="registered">登録順</option>
+            <option value="name_asc">名前 A→Z</option>
+            <option value="name_desc">名前 Z→A</option>
+          </select>
+          <button id="reload" type="button">データ再読込</button>
+        </div>
+      </div>
     </div>
-    <hr>
-    <div class="grid" id="grid"></div>
-  </div>
+  </header>
 
-  <div class="side">
-    <div>
-      <h3>選択中（最大11）</h3>
-      <div id="selectedList" class="small"></div>
-    </div>
+  <main>
+    <section class="pyramidWrap">
+      <div class="pyramid">
+        <div class="hintBar">
+          <div id="count"></div>
+          <div class="miniBtns">
+            <button class="mini" id="clear" type="button">全解除</button>
+            <button class="mini primary" id="autoFill" type="button">ピラミッド反映</button>
+          </div>
+        </div>
+        <div id="pyramid"></div>
+      </div>
+    </section>
 
-    <div class="pyramid">
-      <h3>プレビュー</h3>
-      <div id="pyramidArea"></div>
-    </div>
-  </div>
-</div>
+    <section style="margin-top:16px">
+      <div class="grid" id="grid"></div>
+    </section>
+  </main>
 
-<script>
-let TRAINEES = [];
-let selected = [];
-let currentSort = "default";
+  <script>
+    const CSV_PATH = "data/master.csv";
+    const gridEl = document.getElementById("grid");
+    const sortEl = document.getElementById("sort");
+    const countEl = document.getElementById("count");
+    const pyramidEl = document.getElementById("pyramid");
 
-const SORTS = {
-  default:{ label:"登録順", compare:(a,b)=>a.no-b.no },
-  name:{ label:"名前順", compare:(a,b)=>a.name.localeCompare(b.name,"ja") },
-};
+    const state = {
+      people: [],
+      selectedIds: new Set(),
+    };
 
-function initSort(){
-  const sel=document.getElementById("sortSelect");
-  sel.innerHTML="";
-  Object.keys(SORTS).forEach(k=>{
-    const o=document.createElement("option");
-    o.value=k; o.textContent=SORTS[k].label;
-    sel.appendChild(o);
-  });
-  sel.value=currentSort;
-  sel.onchange=()=>{ currentSort=sel.value; renderGrid(); };
-}
-
-function setStatus(msg){ document.getElementById("status").textContent = msg; }
-
-// CSV簡易パーサ（カンマ/タブどっちもOK、ダブルクォートも最低限対応）
-function parseTable(text){
-  const t = text.trim();
-  if(!t) return [];
-  const lines = t.split(/\r?\n/).filter(l=>l.trim().length);
-  const delim = (lines[0].includes("\t") && !lines[0].includes(",")) ? "\t" : ",";
-  const rows = lines.map(line => splitLine(line, delim));
-  const header = rows.shift().map(h=>h.trim());
-  return rows.map(cols=>{
-    const obj={};
-    header.forEach((h,i)=> obj[h]=(cols[i]??"").trim());
-    return obj;
-  });
-}
-function splitLine(line, delim){
-  const out=[]; let cur=""; let inQ=false;
-  for(let i=0;i<line.length;i++){
-    const ch=line[i];
-    if(ch === '"'){
-      if(inQ && line[i+1] === '"'){ cur+='"'; i++; }
-      else inQ=!inQ;
-      continue;
+    function escapeHtml(s){
+      return String(s ?? "")
+        .replaceAll("&","&amp;")
+        .replaceAll("<","&lt;")
+        .replaceAll(">","&gt;")
+        .replaceAll('"',"&quot;")
+        .replaceAll("'","&#39;");
     }
-    if(!inQ && ch===delim){ out.push(cur); cur=""; continue; }
-    cur+=ch;
-  }
-  out.push(cur);
-  return out;
-}
 
-async function loadMasterFromFile(){
-  setStatus("data/master.csv 読込中…");
-  const res = await fetch("./data/master.csv", { cache: "no-store" });
-  if(!res.ok) throw new Error("master.csv が読めへん（" + res.status + "）");
-  const text = await res.text();
-  const rows = parseTable(text);
-
-  // 必須列: id,name,img
-  const filtered = rows.filter(r=>r.id && r.name && r.img);
-
-  TRAINEES = filtered.map((r,i)=>({
-    no:i+1,
-    id:r.id,
-    name:r.name,
-    img:r.img,
-    profileUrl: r.profileUrl || r.url || ""
-  }));
-
-  // 選択の整合（データ更新で消えたidを削除）
-  const idSet = new Set(TRAINEES.map(t=>t.id));
-  selected = selected.filter(id => idSet.has(id));
-
-  setStatus(`読込OK：${TRAINEES.length}人`);
-  initSort();
-  renderGrid();
-  renderSelected();
-  renderPyramid();
-}
-
-function renderGrid(){
-  const grid=document.getElementById("grid");
-  grid.innerHTML="";
-  const sorted=[...TRAINEES].sort(SORTS[currentSort].compare);
-
-  sorted.forEach(t=>{
-    const div=document.createElement("div");
-    div.className="card"+(selected.includes(t.id)?" selected":"");
-    div.innerHTML=`<img src="${t.img}" alt=""><div style="padding:6px 6px 10px;">${t.name}</div>`;
-    div.onclick=()=>toggleSelect(t.id);
-    grid.appendChild(div);
-  });
-}
-
-function toggleSelect(id){
-  if(selected.includes(id)){
-    selected=selected.filter(x=>x!==id);
-  }else{
-    if(selected.length>=11) return;
-    selected.push(id);
-  }
-  renderGrid();
-  renderSelected();
-  renderPyramid();
-}
-
-function renderSelected(){
-  const box=document.getElementById("selectedList");
-  if(selected.length===0){ box.textContent="（まだ選んでへん）"; return; }
-  box.innerHTML="";
-  selected.forEach((id,idx)=>{
-    const t=TRAINEES.find(x=>x.id===id);
-    if(!t) return;
-    const div=document.createElement("div");
-    div.textContent = `${idx+1}. ${t.name}`;
-    box.appendChild(div);
-  });
-}
-
-function renderPyramid(){
-  const area=document.getElementById("pyramidArea");
-  area.innerHTML="";
-  const shape=[1,2,3,5];
-  let idx=0;
-  shape.forEach(n=>{
-    const row=document.createElement("div");
-    row.className="pRow";
-    for(let i=0;i<n;i++){
-      const id=selected[idx++];
-      if(!id){
-        const ph=document.createElement("div");
-        ph.style.width="90px";
-        ph.style.height="90px";
-        ph.style.borderRadius="14px";
-        ph.style.border="1px dashed #333";
-        row.appendChild(ph);
-        continue;
+    function splitCsvLine(line){
+      const out = [];
+      let cur = "";
+      let inQ = false;
+      for (let i=0;i<line.length;i++){
+        const c = line[i];
+        if (c === '"'){
+          if (inQ && line[i+1] === '"'){ cur += '"'; i++; }
+          else inQ = !inQ;
+        } else if (c === "," && !inQ){
+          out.push(cur); cur = "";
+        } else {
+          cur += c;
+        }
       }
-      const t=TRAINEES.find(x=>x.id===id);
-      const img=document.createElement("img");
-      img.src=t.img;
-      img.title=t.name;
-      row.appendChild(img);
+      out.push(cur);
+      return out;
     }
-    area.appendChild(row);
-  });
-}
 
-document.getElementById("btnReload").addEventListener("click", ()=>{
-  loadMasterFromFile().catch(e=>setStatus("エラー: "+e.message));
-});
+    function parseCsv(text){
+      const lines = text.replace(/\r\n/g,"\n").replace(/\r/g,"\n").split("\n").filter(l => l.trim() !== "");
+      if (!lines.length) return [];
+      const header = splitCsvLine(lines[0]).map(h => h.trim());
+      const rows = [];
+      for (let i=1;i<lines.length;i++){
+        const cols = splitCsvLine(lines[i]);
+        const obj = {};
+        for (let j=0;j<header.length;j++){
+          obj[header[j]] = (cols[j] ?? "").trim();
+        }
+        rows.push(obj);
+      }
+      return rows;
+    }
 
-// 初回ロード
-loadMasterFromFile().catch(e=>{
-  setStatus("エラー: " + e.message + "（data/master.csv を作ってコミットしてるか確認）");
-});
-</script>
+    function normalizePeople(rows){
+      return rows.map((r, idx) => {
+        const id = r.id || r.ID || r.Id || String(idx+1);
+        const name = r.name || r.Name || r.名前 || r.氏名 || "";
+        const name_kana = r.kana || r.Kana || r.カナ || r.ふりがな || "";
+        const img = r.img || r.image || r.Image || r.画像 || "";
+        return { id, name, name_kana, img, __idx: idx };
+      });
+    }
 
+    function setCountText(){
+      const n = state.selectedIds.size;
+      countEl.textContent = n ? `選択中：${n}` : "";
+    }
+
+    function getSortedPeople(){
+      const arr = [...state.people];
+      const mode = sortEl.value;
+      if (mode === "registered"){
+        arr.sort((a,b) => a.__idx - b.__idx);
+      } else if (mode === "name_asc"){
+        arr.sort((a,b) => (a.name || "").localeCompare(b.name || "", "ja"));
+      } else if (mode === "name_desc"){
+        arr.sort((a,b) => (b.name || "").localeCompare(a.name || "", "ja"));
+      }
+      return arr;
+    }
+
+    function renderGrid(){
+      const arr = getSortedPeople();
+      const html = arr.map(p => {
+        const selected = state.selectedIds.has(p.id) ? "selected" : "";
+        const imgSrc = p.img ? escapeHtml(p.img) : "";
+        const name = escapeHtml(p.name || "");
+        const sub = escapeHtml(p.name_kana || "");
+        return `
+          <div class="card ${selected}" data-id="${escapeHtml(p.id)}" role="button" tabindex="0" aria-label="${name}">
+            <img class="thumb" src="${imgSrc}" alt="${name}" loading="lazy" onerror="this.style.display='none'; this.insertAdjacentHTML('afterend','<div style=&quot;aspect-ratio:1/1;background:rgba(255,255,255,.06);display:block&quot;></div>')" />
+            <div class="meta">
+              <p class="name">${name}</p>
+              <p class="sub">${sub}</p>
+            </div>
+          </div>
+        `;
+      }).join("");
+      gridEl.innerHTML = html;
+      setCountText();
+    }
+
+    function toggleSelect(id){
+      if (state.selectedIds.has(id)) state.selectedIds.delete(id);
+      else state.selectedIds.add(id);
+      renderGrid();
+    }
+
+    function renderPyramidFromSelection(){
+      const picked = state.people.filter(p => state.selectedIds.has(p.id));
+      const order = [1,2,3,5];
+      const totalSlots = order.reduce((a,b)=>a+b,0);
+
+      const slots = picked.slice(0, totalSlots);
+
+      let cursor = 0;
+      const rowsHtml = order.map(n => {
+        const rowItems = [];
+        for (let i=0;i<n;i++){
+          const p = slots[cursor++];
+          if (p){
+            const imgSrc = p.img ? escapeHtml(p.img) : "";
+            const name = escapeHtml(p.name || "");
+            rowItems.push(`
+              <div class="slot" title="${name}">
+                <img src="${imgSrc}" alt="${name}" loading="lazy" onerror="this.style.display='none'; this.parentElement.style.background='rgba(255,255,255,.06)'" />
+                <div class="cap">${name}</div>
+              </div>
+            `);
+          } else {
+            rowItems.push(`<div class="slot"><div style="aspect-ratio:1/1"></div><div class="cap"></div></div>`);
+          }
+        }
+        return `<div class="row">${rowItems.join("")}</div>`;
+      }).join("");
+
+      pyramidEl.innerHTML = rowsHtml;
+    }
+
+    async function loadData(){
+      const res = await fetch(CSV_PATH, { cache: "no-store" });
+      const text = await res.text();
+      const rows = parseCsv(text);
+      state.people = normalizePeople(rows);
+      state.selectedIds.clear();
+      pyramidEl.innerHTML = "";
+      renderGrid();
+    }
+
+    gridEl.addEventListener("click", (e) => {
+      const card = e.target.closest(".card");
+      if (!card) return;
+      toggleSelect(card.dataset.id);
+    });
+
+    gridEl.addEventListener("keydown", (e) => {
+      if (e.key !== "Enter" && e.key !== " ") return;
+      const card = e.target.closest(".card");
+      if (!card) return;
+      e.preventDefault();
+      toggleSelect(card.dataset.id);
+    });
+
+    sortEl.addEventListener("change", renderGrid);
+
+    document.getElementById("reload").addEventListener("click", loadData);
+    document.getElementById("clear").addEventListener("click", () => {
+      state.selectedIds.clear();
+      pyramidEl.innerHTML = "";
+      renderGrid();
+    });
+    document.getElementById("autoFill").addEventListener("click", renderPyramidFromSelection);
+
+    loadData();
+  </script>
 </body>
 </html>
