--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       --line:rgba(255,255,255,.12);
       --shadow:0 10px 30px rgba(0,0,0,.35);
       --r:14px;
-      --headerH: 64px; /* JSで実測して上書き */
-      --stickyGap: 10px;
+      --stickyTop: 10px; /* JSで「スクロールしたら」変える */
     }
     *{box-sizing:border-box}
     body{
@@ -27,16 +26,19 @@
       color:var(--text);
     }
 
+    /* ヘッダーは最初は通常、スクロール後だけ固定に見えるようにする */
     header{
-      position:sticky; top:0; z-index:50;
-      backdrop-filter: blur(10px);
+      position:relative;
       background: rgba(11,15,26,.72);
       border-bottom:1px solid var(--line);
     }
-    .wrap{max-width:1100px;margin:0 auto;padding:12px 16px}
-    .top{
-      display:flex; align-items:center; justify-content:space-between; gap:12px;
+    header.isStuck{
+      position:sticky; top:0; z-index:50;
+      backdrop-filter: blur(10px);
     }
+
+    .wrap{max-width:1100px;margin:0 auto;padding:12px 16px}
+    .top{display:flex; align-items:center; justify-content:space-between; gap:12px}
     h1{margin:0;font-size:18px;font-weight:700;letter-spacing:.2px}
 
     .controls{
@@ -61,55 +63,51 @@
 
     main{max-width:1100px;margin:0 auto;padding:14px 16px 60px}
 
-    /* ピラミッド（スクロール固定） */
+    /* ✅ プレビュー：スクロールしたら固定（最初から固定しない） */
     .pyramidWrap{
-      position: sticky;
-      top: calc(var(--headerH) + var(--stickyGap));
-      z-index: 40;
       margin-top: 10px;
+    }
+    .pyramidWrap.isSticky{
+      position: sticky;
+      top: var(--stickyTop);
+      z-index: 40;
     }
     .pyramid{
       background: rgba(18,26,43,.65);
       border:1px solid var(--line);
       border-radius: var(--r);
       box-shadow: var(--shadow);
-      padding:12px;
+      padding:10px 10px 12px;
     }
     .hintBar{
       display:flex; align-items:center; justify-content:space-between;
-      margin:0 0 10px; gap:10px; flex-wrap:wrap;
+      margin:0 0 8px; gap:10px; flex-wrap:wrap;
       color:var(--muted); font-size:12px;
     }
+    .hintBar strong{color:var(--text); font-weight:700}
     .miniBtns{display:flex; gap:8px; align-items:center}
-    .mini{
-      height:32px;
-      padding:0 10px;
-      border-radius:10px;
-      background: rgba(255,255,255,.06);
-      border:1px solid var(--line);
-      box-shadow:none;
-    }
-    .mini.primary{
-      background: rgba(40,120,255,.22);
-      border-color: rgba(40,120,255,.35);
-    }
+
+    /* 反映ボタンは不要：消す（見た目もDOMも） */
+    .miniBtns{display:none}
 
     .row{
       display:flex;
       justify-content:center;
-      gap:10px;
-      margin:10px 0;
-      flex-wrap:wrap;
+      gap:8px;
+      margin:8px 0;
+      flex-wrap:nowrap; /* ✅ 5人は折り返さない */
+      overflow:hidden;
     }
 
-    /* プレビュー側は丸 */
+    /* ✅ プレビュー側：丸、枠は丸（楕円にしない）、名前は省略しないで2行まで */
     .slot{
-      width:86px;
+      width:64px; /* スマホで5人を収めるため小さめ */
+      flex: 0 0 auto;
       border-radius:999px;
       border:1px solid rgba(255,255,255,.18);
       background: rgba(255,255,255,.04);
       overflow:hidden;
-      box-shadow: 0 8px 18px rgba(0,0,0,.22);
+      box-shadow: 0 6px 14px rgba(0,0,0,.22);
     }
     .slot img{
       width:100%;
@@ -119,13 +117,18 @@
       border-radius:999px;
     }
     .slot .cap{
-      padding:6px 8px 8px;
-      font-size:11px;
-      color:var(--muted);
-      white-space:nowrap;
-      overflow:hidden;
-      text-overflow:ellipsis;
+      padding:6px 6px 8px;
+      font-size:10px;
+      color:var(--text);
       text-align:center;
+
+      /* ✅ 2行まで表示して、それ以上は… */
+      display:-webkit-box;
+      -webkit-line-clamp:2;
+      -webkit-box-orient:vertical;
+      overflow:hidden;
+      line-height:1.15;
+      min-height: 2.3em;
     }
     .slot.empty{
       border-style:dashed;
@@ -134,17 +137,26 @@
     .slot.empty .cap{color:transparent}
 
     /* 一覧 */
-    .gridSection{margin-top:14px}
+    .gridSection{margin-top:12px}
+
+    /* ✅ スマホは4列固定（小さくして一気に見れる） */
     .grid{
       display:grid;
+      gap:10px;
       grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-      gap:14px;
     }
+    @media (max-width: 640px){
+      .grid{ grid-template-columns: repeat(4, 1fr); }
+    }
+    @media (max-width: 420px){
+      .grid{ grid-template-columns: repeat(3, 1fr); }
+    }
+
     .card{
       position:relative;
       background: linear-gradient(180deg, rgba(18,26,43,.9), rgba(15,22,38,.92));
       border:1px solid var(--line);
-      border-radius: var(--r);
+      border-radius: 14px;
       box-shadow: var(--shadow);
       overflow:hidden;
       cursor:pointer;
@@ -159,9 +171,9 @@
       display:block;
       object-fit: cover;
     }
-    .meta{padding:10px 10px 12px}
-    .name{font-size:14px;font-weight:650;line-height:1.2;margin:0 0 6px}
-    .sub{font-size:12px;color:var(--muted);margin:0}
+    .meta{padding:8px 8px 10px}
+    .name{font-size:13px;font-weight:700;line-height:1.2;margin:0 0 4px}
+    .sub{font-size:11px;color:var(--muted);margin:0}
     .card.selected{
       border-color: rgba(110,190,255,.85);
       filter: saturate(1.05);
@@ -171,41 +183,37 @@
     /* 並び順番号バッジ */
     .idx{
       position:absolute;
-      top:10px; left:10px;
-      height:22px;
-      padding:0 8px;
+      top:8px; left:8px;
+      height:20px;
+      padding:0 7px;
       border-radius:999px;
       display:inline-flex;
       align-items:center;
-      font-size:12px;
-      font-weight:700;
+      font-size:11px;
+      font-weight:800;
       color:rgba(255,255,255,.95);
       background: rgba(0,0,0,.38);
       border:1px solid rgba(255,255,255,.14);
       backdrop-filter: blur(6px);
     }
 
-    /* 選択バッジ（任意：選択中だけ右上） */
+    /* 選択バッジ */
     .pick{
       position:absolute;
-      top:10px; right:10px;
-      height:22px;
-      padding:0 8px;
+      top:8px; right:8px;
+      height:20px;
+      padding:0 7px;
       border-radius:999px;
       display:none;
       align-items:center;
-      font-size:12px;
-      font-weight:700;
+      font-size:11px;
+      font-weight:800;
       color:rgba(255,255,255,.95);
       background: rgba(40,120,255,.28);
       border:1px solid rgba(40,120,255,.45);
       backdrop-filter: blur(6px);
     }
     .card.selected .pick{display:inline-flex}
-
-    @media (max-width:520px){
-      .slot{width:78px}
-    }
   </style>
 </head>
 <body>
@@ -226,14 +234,13 @@
   </header>
 
   <main>
-    <section class="pyramidWrap">
+    <!-- ✅ プレビューは「選んでる子が見える」ためのやつ。スクロールしたら固定 -->
+    <section class="pyramidWrap" id="pyramidWrap">
       <div class="pyramid">
         <div class="hintBar">
           <div id="count"></div>
-          <div class="miniBtns">
-            <button class="mini" id="clear" type="button">全解除</button>
-            <button class="mini primary" id="autoFill" type="button">プレビュー反映</button>
-          </div>
+          <!-- 反映ボタンは消してる -->
+          <div class="miniBtns"></div>
         </div>
         <div id="pyramid"></div>
       </div>
@@ -248,6 +255,7 @@
     const CSV_PATH = "data/master.csv";
 
     const headerEl = document.getElementById("header");
+    const pyramidWrapEl = document.getElementById("pyramidWrap");
     const gridEl = document.getElementById("grid");
     const sortEl = document.getElementById("sort");
     const countEl = document.getElementById("count");
@@ -258,12 +266,6 @@
       selectedIds: new Set(),
       lastSortedIds: [],
     };
-
-    function setHeaderHeightVar(){
-      const h = Math.ceil(headerEl.getBoundingClientRect().height || 64);
-      document.documentElement.style.setProperty("--headerH", h + "px");
-    }
-    window.addEventListener("resize", setHeaderHeightVar);
 
     function escapeHtml(s){
       return String(s ?? "")
@@ -319,12 +321,17 @@
     function normalizePeople(rows){
       return rows.map((r, idx) => {
         const id = pickField(r, ["id","ID","Id"]) || String(idx+1);
+
+        // ✅ 一覧（選ぶ側）は情報多め：name / romaji / birthYear 想定
         const name = pickField(r, ["name","Name","名前","氏名"]);
-        const kana = pickField(r, ["kana","Kana","カナ","ふりがな","フリガナ"]);
+        const romaji = pickField(r, ["romaji","Romaji","roman","ローマ字"]);
+        const birth = pickField(r, ["birth","birthYear","year","生年","生年月日"]);
         const img  = pickField(r, ["img","image","Image","画像","photo","Photo"]);
+
+        // ✅ 将来用：出身地など
         const origin = pickField(r, ["origin","出身地","出身","city","pref","prefecture"]);
-        const note = pickField(r, ["note","memo","メモ","補足","remark","remarks"]);
-        return { id, name, kana, img, origin, note, __idx: idx };
+
+        return { id, name, romaji, birth, img, origin, __idx: idx };
       });
     }
 
@@ -347,11 +354,12 @@
       return arr;
     }
 
-    function buildSubLine(p){
+    // ✅ 選ぶ側のサブ行（情報多め）
+    function buildSubLineForGrid(p){
       const parts = [];
-      if (p.kana) parts.push(p.kana);
+      if (p.romaji) parts.push(p.romaji);
+      if (p.birth) parts.push(p.birth);
       if (p.origin) parts.push(p.origin);
-      // noteは長くなりがちなので表示はしない（必要ならここに追加）
       return parts.join(" / ");
     }
 
@@ -361,7 +369,7 @@
         const selected = state.selectedIds.has(p.id) ? "selected" : "";
         const imgSrc = p.img ? escapeHtml(p.img) : "";
         const name = escapeHtml(p.name || "");
-        const sub = escapeHtml(buildSubLine(p));
+        const sub = escapeHtml(buildSubLineForGrid(p));
         const idx = i + 1;
 
         return `
@@ -385,21 +393,22 @@
       setCountText();
     }
 
+    // ✅ 選択したら即プレビュー反映（ボタン不要）
     function toggleSelect(id){
       if (state.selectedIds.has(id)) state.selectedIds.delete(id);
       else state.selectedIds.add(id);
       renderGrid();
+      renderPyramidFromSelection(); // ← 即反映
     }
 
     function renderPyramidFromSelection(){
-      // 選択された人だけ、現在の並び順で上から詰める
+      // 現在の並び順で上から詰める
       const orderIds = state.lastSortedIds.length ? state.lastSortedIds : state.people.map(p => p.id);
       const picked = orderIds
         .filter(id => state.selectedIds.has(id))
         .map(id => state.people.find(p => p.id === id))
         .filter(Boolean);
 
-      // 1-2-3-5
       const rows = [1,2,3,5];
       const totalSlots = rows.reduce((a,b)=>a+b,0);
       const slots = picked.slice(0, totalSlots);
@@ -411,7 +420,7 @@
           const p = slots[cursor++];
           if (p){
             const imgSrc = p.img ? escapeHtml(p.img) : "";
-            const name = escapeHtml(p.name || "");
+            const name = escapeHtml(p.name || ""); // ✅ プレビューは名前だけ
             rowItems.push(`
               <div class="slot" title="${name}">
                 ${imgSrc
@@ -440,7 +449,29 @@
       state.selectedIds.clear();
       pyramidEl.innerHTML = "";
       renderGrid();
-      setHeaderHeightVar();
+      renderPyramidFromSelection();
+    }
+
+    // ✅ スクロールしたらプレビューを固定にする（最初は固定しない）
+    function setupScrollSticky(){
+      const headerBottom = () => headerEl.getBoundingClientRect().bottom;
+
+      function tick(){
+        // ヘッダーは「スクロールしたら」sticky化（見え方の要望に合わせる）
+        headerEl.classList.toggle("isStuck", window.scrollY > 10);
+
+        // プレビューはヘッダーが画面上に消えていくくらいから固定
+        const shouldStick = window.scrollY > 120; // ここは好みで微調整
+        pyramidWrapEl.classList.toggle("isSticky", shouldStick);
+
+        // sticky の top を「ヘッダーの高さ + 10」に追従
+        const h = Math.ceil(headerEl.getBoundingClientRect().height || 0);
+        document.documentElement.style.setProperty("--stickyTop", (h + 10) + "px");
+      }
+
+      window.addEventListener("scroll", tick, { passive:true });
+      window.addEventListener("resize", tick);
+      tick();
     }
 
     gridEl.addEventListener("click", (e) => {
@@ -459,20 +490,12 @@
 
     sortEl.addEventListener("change", () => {
       renderGrid();
-      // 並び替え後もプレビューは「選択集合」を維持して、反映ボタンで更新
-      // すぐ追従したいなら↓のコメント外す
-      // renderPyramidFromSelection();
+      renderPyramidFromSelection(); // 並び替えたらプレビューも即追従
     });
 
     document.getElementById("reload").addEventListener("click", loadData);
-    document.getElementById("clear").addEventListener("click", () => {
-      state.selectedIds.clear();
-      pyramidEl.innerHTML = "";
-      renderGrid();
-    });
-    document.getElementById("autoFill").addEventListener("click", renderPyramidFromSelection);
 
-    setHeaderHeightVar();
+    setupScrollSticky();
     loadData();
   </script>
 </body>
