--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
     <!-- ベンチ：ここはスクロールで流れる -->
     <section class="benchWrap">
       <div class="benchHeader">
-        <div><strong>ベンチ</strong> <span id="benchCount"></span></div>
+        <div><strong>追加枠</strong> <span id="benchCount"></span></div>
         <div style="opacity:.9" id="benchHint"></div>
       </div>
       <div class="benchRow" id="bench"></div>
