--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Produce101 11人ピラミッドメーカー</title>
+  <title>日プ新世界 ピラミッドメーカー</title>
   <style>
     :root{
       --bg:#0b0f1a;
